syntax = "proto3";

option go_package = "github.com/tupyy/tinyedge-controller/pkg/grpc/common";

// An empty message
message Empty {}

enum Status {
    Deploying = 0;
    Running = 1;
    Crashed = 2;
    Stopped = 3;
}

message WorkloadStatus {
    string name = 1;
    Status status = 2;
    uint64 last_updated = 3;
}

// Heartbeat
message HeartbeatInfo {
    string device_id = 1;
}

message ProfileCondition {
    string name = 1;
    string expression = 2;
}

message Profile {
    string name = 1;
    repeated ProfileCondition conditions = 2;
}

message Configuration {
    repeated Profile profiles = 1;
    uint32 heartbeat_period = 2;
}

message Device {
    string id = 1;
    string enrol_status = 2;
    string enroled_at = 3;
    bool registered = 4;
    string registered_at = 5;
    string certificate_sn = 6;
    string namespace = 7;
    string set = 8;
    string configuration = 9;
    repeated string manifests = 10;
}

message Set {
    string name = 1;
    string namespace = 2;
    string configuration = 3;
    repeated string devices = 4;
    repeated string manifests = 5;
}

